# prebuild_third_party

./: .gitattributes  .gitignore  CMakeLists.txt  Compiler.cmake  GenerateVersion.cmake  Package.cmake  check_deps.cmake
build_project/Android/: .gitignore  gradle.properties  local.properties  settings.gradle.kts
build_project/Android/app/: build.gradle.kts  cares.gradle  fmt.gradle  ssl.gradle  zstd.gradle
build_project/Android/app/src/androidTest/java/com/forever/base/: ExampleInstrumentedTest.kt
build_project/Android/app/src/main/: AndroidManifest.xml
build_project/Android/app/src/main/cpp/: base.cpp
build_project/Android/app/src/main/java/com/forever/app/: App.kt  MainActivity.kt
build_project/Android/app/src/main/java/com/forever/app/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
build_project/Android/app/src/main/java/com/forever/app/ui/home/: HomeFragment.kt  HomeViewModel.kt
build_project/Android/app/src/main/java/com/forever/app/ui/slideshow/: SlideshowFragment.kt  SlideshowViewModel.kt
build_project/Android/app/src/main/res/layout/: app_bar_main.xml  fragment_home.xml
build_project/Android/app/src/main/res/navigation/: mobile_navigation.xml
build_project/Android/app/src/main/res/values/: strings.xml
build_project/Android/app/src/test/java/com/forever/base/: ExampleUnitTest.kt
build_project/Android/base/: .gitignore  build.gradle.kts  proguard-rules.pro
build_project/Android/base/src/androidTest/java/com/forever/base/: ExampleInstrumentedTest.kt
build_project/Android/base/src/main/java/com/forever/base/: BaseNativeLibLoader.kt  CoreApplication.kt
build_project/Android/gradle/: libs.versions.toml
build_project/Android/gradle/wrapper/: gradle-wrapper.properties
cmake/: BaseConfig.cmake  Dir.cmake  OpenSSL.cmake  PostBuild.cmake  QciBuild.cmake  Version.cmake  Zstd.cmake  c-ares.cmake  fmt.cmake  generate_metadata_json.cmake  libuv.cmake
cmake/Absl/: Absl.cmake  CMakeLists.txt.in
src/: .gitignore  git_version.h.in
